Redefine Consecutive